fix: set height for input on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -375,7 +375,7 @@ input[type="number"] {
   .input {
     width: 100%;
     min-width: unset;
-    height: auto;
+    height: 40vh;
     max-height: 40vh;
     padding-top: 4px;
     padding-bottom: 4px;
